--- a/index.html
+++ b/index.html
@@ -556,9 +556,9 @@
             <h1>JUST LAUNCHED</h1>
             <h2>E-GIFT CARD</h2>
             <p>THE PERFECT PRESENT FOR ART ENTHUSIASTS</p>
-            <!-- <p>Discover the ultimate gifting solution with our brand-new E-Gift Card. <br>Treat your loved ones to the
+            <p>Discover the ultimate gifting solution with our brand-new E-Gift Card. <br>Treat your loved ones to the
                 joy
-                of choosing their favorite wall art prints from our extensive collection.</p> -->
+                of choosing their favorite wall art prints from our extensive collection.</p>
             <button onclick="window.location.href='e-gift card/index.html';">BUY GIFT CARD
 
             </button>
