--- a/refund policy/index (4).html
+++ b/refund policy/index (4).html
@@ -6,7 +6,7 @@
     <title>Refund Policy</title>
     <style>
         body {
-            background-color: #faf0dd;
+            background-color: #e9e9e7;
             animation: fadeInAnimation ease 3s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
