--- a/e-gift card/index.html
+++ b/e-gift card/index.html
@@ -10,7 +10,7 @@
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
+    background-color: #e9e9e7;
 }
 
 .container {
