--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             margin-left: -10px;
         }
         body{
-            background-color: #DDD0C8;
+            background-color: #e9e9e7;
         }
         .footer p {
             background: #24262b;
