--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <title>Privacy Policy</title>
     <style>
         body {
-            background-color: #faf0dd;
+            background-color: #e9e9e7;
             animation: fadeInAnimation ease 3s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
