--- a/terms and services/index.html
+++ b/terms and services/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #faf0dd;
+            background-color: #e9e9e7;
             animation: fadeInAnimation ease 3s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
