--- a/team/team.html
+++ b/team/team.html
@@ -234,7 +234,7 @@
             <div class="card">
                 <div class="team-image-wrapper">
                     <img class="team-member-image"
-                        src="WhatsApp Image 2024-05-24 at 8.51.50 AM.jpeg">
+                        src="WhatsApp Image 2024-06-18 at 20.47.56_c23eae9a.jpg">
                 </div>
                 <p class="text-blk name">
                     Yash Patel
